# edra

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.dev/: valgrind.supp
assets/shaders/: pass_vertex.glsl
inc/drivers/: bf.h  chip8.h
inc/states/: chip8_pause_state.h  chip8_state.h
inc/system/: input.h  state.h  text.h  window.h
lib/: CMakeLists.txt
lib/auxum/: CMakeLists.txt  README.md
lib/auxum/inc/auxum/: bitset.h  data.h  file.h  ini.h  os.h  std.h  strings.h  thread.h  unused.h
lib/auxum/inc/auxum/data/: dynarray.h
lib/auxum/inc/auxum/file/: ini.h
lib/auxum/inc/auxum/std/: error.h  strings.h
lib/auxum/src/: bitset.c  dynarray.c  ini.c  strings.c  thread.c
lib/auxum/src/data/: bitset.c  dynarray.c
lib/auxum/src/file/: ini.c
lib/auxum/src/os/: thread.c
lib/auxum/src/std/: strings.c
lib/auxum/test/: main.c
lib/cchip8/: CMakeLists.txt
lib/cchip8/inc/cchip8/: memory.h  state.h
lib/cchip8/inc/cchip8/cpu/: interpreter.h
lib/cchip8/src/: memory.c  state.c
lib/cchip8/src/cpu/: interpreter.c
lib/cchip8/test/: main.c
lib/clay_sdl3/: CMakeLists.txt
lib/clay_sdl3/inc/: clay_renderer_SDL3.h
lib/clay_sdl3/src/: clay_renderer_SDL3.c
platform/vita/livearea/contents/: template.xml
roms/: README.md  norom.8o  norom.ch8
scripts/: linecount.sh
src/: main.c
src/drivers/: bf.c  chip8.c
src/states/: chip8_pause_state.c  chip8_state.c
src/system/: input.c  state.c  text.c  window.c
vita-metadata/livearea/contents/: template.xml
vita-module/: libGL.suprx
